quasar - client - try to fix footer paddind on iOS

--- a/src/layouts/main-layout/main-layout.sass
+++ b/src/layouts/main-layout/main-layout.sass
@@ -9,3 +9,9 @@
   .q-footer
     .q-tab__icon
       font-size: 30px
+
+/* for your app's footer */
+.platform-ios
+  .q-footer
+    padding-bottom: constant(safe-area-inset-bottom)
+    padding-bottom: env(safe-area-inset-bottom)
